recursion.lessons.recursion.tree.Tree.scala.error
Tree:5: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		setCouleur(current(steps))
                                  ^Tree:8: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		setCouleur(current(steps-1))
                                  ^Tree:13: error: type mismatch;
 found   : Unit
 required: java.awt.Color
		setCouleur(current(steps))
                                  ^